Bug 484367 - Mapping Shift+Key with the non-alphabet keys not functioning as expected
Summary: Mapping Shift+Key with the non-alphabet keys not functioning as expected
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_tablet (other bugs)
Version First Reported In: 6.0.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-24 07:07 UTC by spamless.9v5xj
Modified: 2024-08-05 17:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spamless.9v5xj 2024-03-24 07:07:29 UTC
Bug first noticed after upgrading to KDE6. When attempting to map the buttons on my tablet to key inputs in System Settings > Drawing Tablet, if the attempted mapping involves Shift + a numeric or punctuation key, the key input is not properly recognised.

For example, if I attempt to set a button to send the ! sign pressing it will actually output numeral 1.
Comment 1 Joshua Goins 2024-07-29 17:39:57 UTC
You're saying that this used to work like you expected in KDE5? We did change some stuff in this area, so I'm trying to figure out if it's a regression.
Comment 2 spamless.9v5xj 2024-07-30 06:21:48 UTC
Indeed, I had mapped one of my buttons to "Ctrl +" (that is, "Ctrl Shift =" to zoom in in Krita. After upgrade I am unable to do that and it is simply outputting "Ctrl =".
Comment 3 Joshua Goins 2024-07-30 13:17:12 UTC
Perfect, I'll ask the person who may know the problem then :-)
Comment 4 Bug Janitor Service 2024-07-31 21:59:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6190
Comment 5 fanzhuyifan 2024-08-05 16:52:16 UTC
Git commit 1240ac1dfe4569f3bb5d5d182ae3c393dc2c5bd5 by Yifan Zhu.
Committed on 05/08/2024 at 16:37.
Pushed by fanzhuyifan into branch 'master'.

plugins/buttonrebinds: correctly handle level 1 keys

Level 1 keys (e.g., !=Shift+1) need to have shift added.

M  +1    -0    autotests/integration/buttonrebind_test.cpp
M  +1    -1    src/inputmethod.cpp
M  +4    -2    src/plugins/buttonrebinds/buttonrebindsfilter.cpp
M  +2    -2    src/xkb.cpp
M  +4    -1    src/xkb.h

https://invent.kde.org/plasma/kwin/-/commit/1240ac1dfe4569f3bb5d5d182ae3c393dc2c5bd5
Comment 6 fanzhuyifan 2024-08-05 17:20:19 UTC
Git commit 2dc6c88c5dba47a9966d2d645d8bbdcbb8d1538c by Yifan Zhu.
Committed on 05/08/2024 at 17:04.
Pushed by fanzhuyifan into branch 'Plasma/6.1'.

plugins/buttonrebinds: correctly handle level 1 keys

Level 1 keys (e.g., !=Shift+1) need to have shift added.


(cherry picked from commit 1240ac1dfe4569f3bb5d5d182ae3c393dc2c5bd5)

Co-authored-by: Yifan Zhu <fanzhuyifan@gmail.com>

M  +1    -0    autotests/integration/buttonrebind_test.cpp
M  +1    -1    src/inputmethod.cpp
M  +4    -2    src/plugins/buttonrebinds/buttonrebindsfilter.cpp
M  +2    -2    src/xkb.cpp
M  +4    -1    src/xkb.h

https://invent.kde.org/plasma/kwin/-/commit/2dc6c88c5dba47a9966d2d645d8bbdcbb8d1538c