plugins/buttonrebinds: correctly handle level 1 keys

Level 1 keys (e.g., !=Shift+1) need to have shift added.

BUG: 484367